[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/Demon/demon-idle.png" type="Texture" id=1]
[ext_resource path="res://scripts/Demon.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/demon_hurt.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Demon/demon-attack.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/demon_wings_flap.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 39 )

[sub_resource type="Animation" id=2]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hurt"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("HurtSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "hurt"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=12]
states/attack/node = SubResource( 14 )
states/attack/position = Vector2( 479, 159 )
states/death/node = SubResource( 6 )
states/death/position = Vector2( 649, 55 )
states/hurt/node = SubResource( 7 )
states/hurt/position = Vector2( 288, 39 )
states/idle/node = SubResource( 8 )
states/idle/position = Vector2( 479, 62 )
transitions = [ "idle", "hurt", SubResource( 9 ), "hurt", "idle", SubResource( 10 ), "idle", "death", SubResource( 11 ), "idle", "attack", SubResource( 15 ), "attack", "idle", SubResource( 16 ) ]
start_node = "idle"
end_node = "death"
graph_offset = Vector2( 0, -21 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=13]

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 29.5207, 25.1414 )

[node name="Demon" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="IdleSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
hframes = 6

[node name="HurtSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -33, -22 )
texture = ExtResource( 4 )
hframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -16, 14 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/death = SubResource( 3 )
anims/hurt = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 13 )

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="DeathSprite" type="Sprite" parent="."]
visible = false
position = Vector2( -31, -23 )
texture = ExtResource( 4 )
hframes = 11

[node name="WingsFlapSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 1000.0
attenuation = 7.72749

[node name="AttackSprite" type="Sprite" parent="."]
position = Vector2( -31.6968, -22.0117 )
texture = ExtResource( 4 )
hframes = 11

[node name="Area2D" type="Area2D" parent="AttackSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackSprite/Area2D"]
position = Vector2( -37.1718, 50.595 )
shape = SubResource( 17 )
[connection signal="body_entered" from="AttackSprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="AttackSprite/Area2D" to="." method="_on_Area2D_body_exited"]
